--- a/app.ipynb
+++ b/app.ipynb
@@ -63,6 +63,35 @@
     "import seaborn as sns\n",
     "sns.countplot('Liked',data=dataset)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Cleaning The Dataset\n",
+    "\n",
+    "corpus = []\n",
+    "for i in range(0,1000):   # 1000 reviews\n",
+    "     review = re.sub('[^a-zA-Z]',\" \",dataset[\"Review\"][i])\n",
+    "     review = review.lower()\n",
+    "     review = review.split()\n",
+    "     pe = PorterStemmer()\n",
+    "     all_stopword = stopwords.words('english')\n",
+    "     all_stopword.remove('not')\n",
+    "     review = [pe.stem(word) for word in review if not word in set(all_stopword)]\n",
+    "     review = \" \".join(review)\n",
+    "     corpus.append(review)\n",
+    "print(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
