--- a/app.ipynb
+++ b/app.ipynb
@@ -91,7 +91,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Creating a Bage of words model for converting review into binary form\n",
+    "\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "cv = CountVectorizer(max_features=1500) ##1500 columns\n",
+    "X = cv.fit_transform(corpus).toarray()\n",
+    "y = dataset[\"Liked\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Dumping Counter Verctorizer object for future use\n",
+    "\n",
+    "import pickle\n",
+    "pickle.dump(cv, open('cv.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Modeling and Training\n",
+    "\n",
+    "#Splitting the data into train and validation sets using train_test_split()\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.2,random_state=0)"
+   ]
   }
  ],
  "metadata": {
