--- a/app.ipynb
+++ b/app.ipynb
@@ -125,6 +125,19 @@
     "from sklearn.model_selection import train_test_split\n",
     "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.2,random_state=0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating a model using MultinomialNB,GaussianNB\n",
+    "\n",
+    "from sklearn.naive_bayes import GaussianNB,MultinomialNB\n",
+    "GNB = GaussianNB()\n",
+    "MNB = MultinomialNB()"
+   ]
   }
  ],
  "metadata": {
