--- a/app.ipynb
+++ b/app.ipynb
@@ -138,6 +138,68 @@
     "GNB = GaussianNB()\n",
     "MNB = MultinomialNB()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fitting the X and y using both\n",
+    "\n",
+    "GNB.fit(X_train, y_train)\n",
+    "MNB.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Comparing both model based on accuracy on test data\n",
+    "\n",
+    "print(GNB.score(X_test,y_test))   ## 0.73\n",
+    "print(MNB.score(X_test,y_test))   ## 0.775"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prediction\n",
+    "y_pred=model.predict(X_test)\n",
+    "print(np.concatenate((y_pred.reshape(len(y_pred),1), np.array(y_test).reshape(len(y_test),1)),1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluating Model\n",
+    "# evaluate our model using the confusion matrix and accuracy score.\n",
+    "from sklearn.metrics import confusion_matrix,accuracy_score\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "score = accuracy_score(y_test,y_pred)\n",
+    "print(cm,score*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Saving and Loading, Revaluating Model\n",
+    "\n",
+    "import pickle\n",
+    "# Save trained model to file\n",
+    "pickle.dump(cls, open(\"review.pkl\", \"wb\"))"
+   ]
   }
  ],
  "metadata": {
