--- a/app.ipynb
+++ b/app.ipynb
@@ -200,6 +200,62 @@
     "# Save trained model to file\n",
     "pickle.dump(cls, open(\"review.pkl\", \"wb\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load save model\n",
+    "loaded_model = pickle.load(open(\"review.pkl\", \"rb\"))\n",
+    "y_pred_new = loaded_model.predict(X_test)\n",
+    "loaded_model.score(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Revaluate model\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix,accuracy_score\n",
+    "cm = confusion_matrix(y_test,y_pred_new)\n",
+    "score = accuracy_score(y_test,y_pred_new)\n",
+    "print(cm,score*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predicting Sentiment For a New Review\n",
+    "\n",
+    "def new_review(new_review):\n",
+    "  new_review = new_review\n",
+    "  new_review = re.sub('[^a-zA-Z]', ' ', new_review)\n",
+    "  new_review = new_review.lower()\n",
+    "  new_review = new_review.split()\n",
+    "  ps = PorterStemmer()\n",
+    "  all_stopwords = stopwords.words('english')\n",
+    "  all_stopwords.remove('not')\n",
+    "  new_review = [ps.stem(word) for word in new_review if not word in  set(all_stopwords)]\n",
+    "  new_review = ' '.join(new_review)\n",
+    "  new_corpus = [new_review]\n",
+    "  new_X_test = cv.transform(new_corpus).toarray()\n",
+    "  print(new_X_test.shape)\n",
+    "  new_y_pred = loaded_model.predict(new_X_test)\n",
+    "  return new_y_pred\n",
+    "new_review = new_review(str(input(\"Enter new review...\")))\n",
+    "if new_review[0]==1:\n",
+    "   print(\"Positive\")\n",
+    "else :\n",
+    "   print(\"Negative\")"
+   ]
   }
  ],
  "metadata": {
